src/grammar/generated/NovaParser.cpp

// Generated from /workspace/src/grammar/Nova.g4 by ANTLR 4.13.2


#include "NovaListener.h"
#include "NovaVisitor.h"

#include "NovaParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct NovaParserStaticData final {
  NovaParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  NovaParserStaticData(const NovaParserStaticData&) = delete;
  NovaParserStaticData(NovaParserStaticData&&) = delete;
  NovaParserStaticData& operator=(const NovaParserStaticData&) = delete;
  NovaParserStaticData& operator=(NovaParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag novaParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<NovaParserStaticData> novaParserStaticData = nullptr;

void novaParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (novaParserStaticData != nullptr) {
    return;
  }
#else
  assert(novaParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<NovaParserStaticData>(
    std::vector<std::string>{
      "sourceFile", "moduleDeclaration", "importDeclaration", "topLevelDeclaration", 
      "functionDeclaration", "functionParameters", "parameterList", "parameter", 
      "returnType", "structDeclaration", "structField", "traitDeclaration", 
      "traitMethod", "functionSignature", "implDeclaration", "implMember", 
      "enumDeclaration", "enumVariant", "typeAliasDeclaration", "constantDeclaration", 
      "externDeclaration", "externFunction", "type_", "primitiveType", "typeReference", 
      "genericType", "typeList", "functionType", "tupleType", "arrayType", 
      "referenceType", "ownershipType", "typeParameterList", "typeParameter", 
      "constraintList", "constraint", "identifierList", "lifetime", "expression", 
      "assignmentExpression", "compoundAssignmentOperator", "logicalExpression", 
      "comparisonExpression", "bitwiseExpression", "arithmeticExpression", 
      "termExpression", "powerExpression", "unaryExpression", "postfixExpression", 
      "primaryExpression", "parenthesizedExpression", "literalExpression", 
      "integerLiteral", "floatLiteral", "booleanLiteral", "characterLiteral", 
      "stringLiteral", "nullLiteral", "identifierExpression", "blockExpression", 
      "block", "statement", "declarationStatement", "variableDeclaration", 
      "pattern", "identifierPattern", "tuplePattern", "structPattern", "wildcardPattern", 
      "expressionStatement", "assignmentStatement", "lambdaExpression", 
      "tupleExpression", "arrayExpression", "structExpression", "fieldInitializer", 
      "enumVariantExpression", "callExpression", "argumentList", "fieldExpression", 
      "compoundAssignmentExpression", "ifExpression", "ifStatement", "condition", 
      "letCondition", "matchExpression", "matchStatement", "matchArm", "loopExpression", 
      "loopStatement", "loopBlock", "whileBlock", "forBlock", "jumpStatement", 
      "breakExpression", "continueExpression", "returnExpression", "awaitExpression", 
      "unsafeExpression", "visibility", "qualifiedName", "identifier"
    },
    std::vector<std::string>{
      "", "'module'", "';'", "'import'", "'as'", "'use'", "'func'", "'where'", 
      "'async'", "'('", "')'", "','", "':'", "'='", "'->'", "'struct'", 
      "'{'", "'}'", "'trait'", "'impl'", "'for'", "'enum'", "'type'", "'const'", 
      "'extern'", "'C'", "'i8'", "'i16'", "'i32'", "'i64'", "'isize'", "'u8'", 
      "'u16'", "'u32'", "'u64'", "'usize'", "'f32'", "'f64'", "'bool'", 
      "'char'", "'str'", "'void'", "'<'", "'>'", "'fn'", "'['", "']'", "'&'", 
      "'mut'", "'\\u003F'", "'''", "'+='", "'-='", "'*='", "'/='", "'%='", 
      "'&='", "'|='", "'^='", "'<<='", "'>>='", "'&&'", "'||'", "'=='", 
      "'!='", "'<='", "'>='", "'|'", "'^'", "'<<'", "'>>'", "'+'", "'-'", 
      "'*'", "'/'", "'%'", "'**'", "'!'", "'.'", "'..'", "'...'", "'true'", 
      "'false'", "'null'", "'let'", "'_'", "'if'", "'else'", "'match'", 
      "'=>'", "'loop'", "'while'", "'in'", "'break'", "'continue'", "'return'", 
      "'await'", "'unsafe'", "'pub'", "'crate'", "'super'", "'::'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "Keyword", "Identifier", "DecimalLiteral", "HexLiteral", "OctalLiteral", 
      "BinaryLiteral", "DecimalFloatLiteral", "StringLiteral", "EscapeSequence", 
      "Comment", "BlockComment", "Whitespace"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  novaParserStaticData = std::move(staticData);
}

}

NovaParser::NovaParser(TokenStream *input) : NovaParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

NovaParser::NovaParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  NovaParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *novaParserStaticData->atn, novaParserStaticData->decisionToDFA, novaParserStaticData->sharedContextCache, options);
}

NovaParser::~NovaParser() {
  delete _interpreter;
}

const atn::ATN& NovaParser::getATN() const {
  return *novaParserStaticData->atn;
}

std::string NovaParser::getGrammarFileName() const {
  return "Nova.g4";
}

const std::vector<std::string>& NovaParser::getRuleNames() const {
  return novaParserStaticData->ruleNames;
}

const dfa::Vocabulary& NovaParser::getVocabulary() const {
  return novaParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView NovaParser::getSerializedATN() const {
  return novaParserStaticData->serializedATN;
}


//----------------- SourceFileContext ------------------------------------------------------------------

NovaParser::SourceFileContext::SourceFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* NovaParser::SourceFileContext::EOF() {
  return getToken(NovaParser::EOF, 0);
}

NovaParser::ModuleDeclarationContext* NovaParser::SourceFileContext::moduleDeclaration() {
  return getRuleContext<NovaParser::ModuleDeclarationContext>(0);
}

std::vector<NovaParser::ImportDeclarationContext *> NovaParser::SourceFileContext::importDeclaration() {
  return getRuleContexts<NovaParser::ImportDeclarationContext>();
}

NovaParser::ImportDeclarationContext* NovaParser::SourceFileContext::importDeclaration(size_t i) {
  return getRuleContext<NovaParser::ImportDeclarationContext>(i);
}

std::vector<NovaParser::TopLevelDeclarationContext *> NovaParser::SourceFileContext::topLevelDeclaration() {
  return getRuleContexts<NovaParser::TopLevelDeclarationContext>();
}

NovaParser::TopLevelDeclarationContext* NovaParser::SourceFileContext::topLevelDeclaration(size_t i) {
  return getRuleContext<NovaParser::TopLevelDeclarationContext>(i);
}


size_t NovaParser::SourceFileContext::getRuleIndex() const {
  return NovaParser::RuleSourceFile;
}

void NovaParser::SourceFileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NovaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSourceFile(this);
}

void NovaParser::SourceFileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NovaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSourceFile(this);
}


std::any NovaParser::SourceFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NovaVisitor*>(visitor))
    return parserVisitor->visitSourceFile(this);
  else
    return visitor->visitChildren(this);
}

NovaParser::SourceFileContext* NovaParser::sourceFile() {
  SourceFileContext *_localctx = _tracker.createInstance<SourceFileContext>(_ctx, getState());
  enterRule(_localctx, 0, NovaParser::RuleSourceFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == NovaParser::T__0) {
      setState(204);
      moduleDeclaration();
    }
    setState(210);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == NovaParser::T__2

    || _la == NovaParser::T__4) {
      setState(207);
      importDeclaration();
      setState(212);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(216);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 32276800) != 0)) {
      setState(213);
      topLevelDeclaration();
      setState(218);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(219);
    match(NovaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleDeclarationContext ------------------------------------------------------------------

NovaParser::ModuleDeclarationContext::ModuleDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NovaParser::QualifiedNameContext* NovaParser::ModuleDeclarationContext::qualifiedName() {
  return getRuleContext<NovaParser::QualifiedNameContext>(0);
}


size_t NovaParser::ModuleDeclarationContext::getRuleIndex() const {
  return NovaParser::RuleModuleDeclaration;
}

void NovaParser::ModuleDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NovaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterModuleDeclaration(this);
}

void NovaParser::ModuleDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NovaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitModuleDeclaration(this);
}


std::any NovaParser::ModuleDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NovaVisitor*>(visitor))
    return parserVisitor->visitModuleDeclaration(this);
  else
    return visitor->visitChildren(this);
}

NovaParser::ModuleDeclarationContext* NovaParser::moduleDeclaration() {
  ModuleDeclarationContext *_localctx = _tracker.createInstance<ModuleDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, NovaParser::RuleModuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(221);
    match(NovaParser::T__0);
    setState(222);
    qualifiedName();
    setState(223);
    match(NovaParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportDeclarationContext ------------------------------------------------------------------

NovaParser::ImportDeclarationContext::ImportDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NovaParser::QualifiedNameContext* NovaParser::ImportDeclarationContext::qualifiedName() {
  return getRuleContext<NovaParser::QualifiedNameContext>(0);
}

NovaParser::IdentifierContext* NovaParser::ImportDeclarationContext::identifier() {
  return getRuleContext<NovaParser::IdentifierContext>(0);
}


size_t NovaParser::ImportDeclarationContext::getRuleIndex() const {
  return NovaParser::RuleImportDeclaration;
}

void NovaParser::ImportDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NovaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportDeclaration(this);
}

void NovaParser::ImportDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NovaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportDeclaration(this);
}


std::any NovaParser::ImportDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NovaVisitor*>(visitor))
    return parserVisitor->visitImportDeclaration(this);
  else
    return visitor->visitChildren(this);
}

NovaParser::ImportDeclarationContext* NovaParser::importDeclaration() {
  ImportDeclarationContext *_localctx = _tracker.createInstance<ImportDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, NovaParser::RuleImportDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(237);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case NovaParser::T__2: {
        enterOuterAlt(_localctx, 1);
        setState(225);
        match(NovaParser::T__2);
        setState(226);
        qualifiedName();
        setState(229);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == NovaParser::T__3) {
          setState(227);
          match(NovaParser::T__3);
          setState(228);
          identifier();
        }
        setState(231);
        match(NovaParser::T__1);
        break;
      }

      case NovaParser::T__4: {
        enterOuterAlt(_localctx, 2);
        setState(233);
        match(NovaParser::T__4);
        setState(234);
        qualifiedName();
        setState(235);
        match(NovaParser::T__1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelDeclarationContext ------------------------------------------------------------------

NovaParser::TopLevelDeclarationContext::TopLevelDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

NovaParser::FunctionDeclarationContext* NovaParser::TopLevelDeclarationContext::functionDeclaration() {
  return getRuleContext<NovaParser::FunctionDeclarationContext>(0);
}

NovaParser::StructDeclarationContext* NovaParser::TopLevelDeclarationContext::structDeclaration() {
  return getRuleContext<NovaParser::StructDeclarationContext>(0);
}

NovaParser::TraitDeclarationContext* NovaParser::TopLevelDeclarationContext::traitDeclaration() {
  return getRuleContext<NovaParser::TraitDeclarationContext>(0);
}

NovaParser::ImplDeclarationContext* NovaParser::TopLevelDeclarationContext::implDeclaration() {
  return getRuleContext<NovaParser::ImplDeclarationContext>(0);
}

NovaParser::EnumDeclarationContext* NovaParser::TopLevelDeclarationContext::enumDeclaration() {
  return getRuleContext<NovaParser::EnumDeclarationContext>(0);
}

NovaParser::TypeAliasDeclarationContext* NovaParser::TopLevelDeclarationContext::typeAliasDeclaration() {
  return getRuleContext<NovaParser::TypeAliasDeclarationContext>(0);
}

NovaParser::ConstantDeclarationContext* NovaParser::TopLevelDeclarationContext::constantDeclaration() {
  return getRuleContext<NovaParser::ConstantDeclarationContext>(0);
}

NovaParser::ExternDeclarationContext* NovaParser::TopLevelDeclarationContext::externDeclaration() {
  return getRuleContext<NovaParser::ExternDeclarationContext>(0);
}


size_t NovaParser::TopLevelDeclarationContext::getRuleIndex() const {
  return NovaParser::RuleTopLevelDeclaration;
}

void NovaParser::TopLevelDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NovaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevelDeclaration(this);
}

void NovaParser::TopLevelDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<NovaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevelDeclaration(this);
}


std::any NovaParser::TopLevelDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<NovaVisitor*>(visitor))
    return parserVisitor->visitTopLevelDeclaration(this);
  else
    return visitor->visitChildren(this);
}

NovaParser::TopLevelDeclarationContext* NovaParser::topLevelDeclaration() {
  TopLevelDeclarationContext *_localctx = _tracker.createInstance<TopLevelDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, NovaParser::RuleTopLevelDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(247);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case NovaParser::T__5:
      case NovaParser::T__7: {
        enterOuterAlt(_localctx, 1);
        setState(239);
        functionDeclaration();
        break;
      }

      case NovaParser::T__14: {
        enterOuterAlt(_localctx, 2);
        setState(240);
        structDeclaration();
        break;
      }

      case NovaParser::T__17: {
        enterOuterAlt(_localctx, 3);
        setState(241);
        traitDeclaration();
        break;
      }

      case NovaParser::T__18: {
        enterOuterAlt(_localctx, 4);
        setState(242);
        implDeclaration();
        break;
      }

      case NovaParser::T__20: {
        enterOuterAlt(_localctx, 5);
        setState(243);
        enumDeclaration();
        break;
      }

      case NovaParser::T__21: {
        enterOuterAlt(_localctx, 6);
        setState(244);
        typeAliasDeclaration();
        break;
      }

      case NovaParser::T__22: {
        enterOuterAlt(_localctx, 7);
        setState(245);
        constantDeclaration();
        break;
      }

      case NovaParser::T__23: {
        enterOuterAlt(_localctx, 8);
        setState(246);
        externDeclaration();
        break;
      }
